--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,80 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+* {
+  scroll-behavior: smooth;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav:hover {
+  color: #057bf2;
+  text-decoration: underline;
+}
+
+.nav__logo {
+  width: 105px;
+  height: 39px;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.nav__links {
+  display: flex;
+  margin-top: 30px;
+  margin-right: 80px;
+  column-gap: 20px;
+  list-style-type: none;
+  padding: 0;
+}
+
+.nav__link {
+  color: #000000;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.header__title {
+  max-width: 709px;
+  margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 58px;
+  line-height: 72px;
+  letter-spacing: -1px;
+}
+
+.span-accent {
+  font-family: "Noto Serif";
+  font-style: italic;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 72px;
+  color: #2f80ed;
+  display: block;
+}
+
+.header__description {
+  max-width: 683px;
+  margin-left: 80px;
+  margin-top: 28px;
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.header__image {
+  width: 646px;
+  height: 568px;
+  object-fit: cover;
+}
