--- a/pages/index.css
+++ b/pages/index.css
@@ -12,6 +12,17 @@
 }
 
 .header {
+  position: relative;
+  background-color: #ffffff;
+  background-image: url("../images/background_header.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  padding: 30px 80px 40px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
 }
@@ -21,65 +32,145 @@
   justify-content: space-between;
 }
 
-.nav:hover {
+.nav__logo {
+  position: absolute;
+  left: 30px;
+  width: 105px;
+  height: 39px;
+}
+
+.nav__link:hover {
   color: #057bf2;
   text-decoration: underline;
 }
 
-.nav__logo {
-  width: 105px;
-  height: 39px;
-  margin-left: 30px;
-  margin-top: 30px;
-}
-
 .nav__links {
+  position: absolute;
+  right: 80px;
   display: flex;
-  margin-top: 30px;
-  margin-right: 80px;
-  column-gap: 20px;
-  list-style-type: none;
+  gap: 20px;
+  list-style: none;
   padding: 0;
 }
 
 .nav__link {
-  color: #000000;
   text-decoration: none;
-  font-weight: bold;
+  color: #000000;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
 }
 
 .header__title {
-  max-width: 709px;
-  margin: 0;
-  font-style: normal;
-  font-weight: 500;
+  font-family: "Inter", Arial, sans-serif;
   font-size: 58px;
   line-height: 72px;
+  font-weight: 500;
   letter-spacing: -1px;
+  max-width: 709px;
+  margin-top: 183px;
 }
 
-.span-accent {
-  font-family: "Noto Serif";
+.header__span-accent {
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
-  font-weight: normal;
   font-size: 58px;
   line-height: 72px;
   color: #2f80ed;
-  display: block;
 }
 
 .header__description {
-  max-width: 683px;
-  margin-left: 80px;
-  margin-top: 28px;
   font-family: "Noto Serif";
-  font-style: normal;
   font-size: 20px;
   line-height: 30px;
+  max-width: 683px;
+}
+
+.header__content {
+  display: flex;
+  justify-content: space-between;
 }
 
 .header__image {
+  position: absolute;
+  top: 124px;
+  right: 5px;
   width: 646px;
   height: 568px;
-  object-fit: cover;
+}
+
+.header__footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.header__paragraph {
+  z-index: 1;
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
+}
+
+.header__paragraph-adress {
+  color: #838383;
+}
+
+.recipes {
+  background-color: #0a2750;
+  background-image: url("../images/background_recipes.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 100px 80px;
+  color: #ffffff;
+}
+
+.recipes__title {
+  font-size: 44px;
+  line-height: 52px;
+  font-weight: 500;
+  max-width: 580px;
+}
+
+.recipes__subtilte {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+  max-width: 438px;
+}
+
+.recipes__videos {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  flex-wrap: wrap;
+  margin-top: 80px;
+  margin-bottom: 115px;
+}
+
+.recipes__video-item {
+  max-width: 438px;
+}
+
+.recipes__iframe {
+  width: 480px;
+  height: 273px;
+  border: none;
+}
+
+.recipes__video-caption {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  margin-top: 24px;
+  display: flex;
+  justify-content: space-between;
 }
