--- a/pages/index.css
+++ b/pages/index.css
@@ -139,7 +139,7 @@
   max-width: 580px;
 }
 
-.recipes__subtilte {
+.recipes__subtitle {
   font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
