--- a/pages/index.css
+++ b/pages/index.css
@@ -174,3 +174,92 @@
   display: flex;
   justify-content: space-between;
 }
+
+.reservation {
+  background-color: #d9e7ff;
+  background-image: url("../images/background_reservation.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 100px 20px;
+  text-align: center;
+}
+
+.reservation__title {
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  margin-bottom: 80px;
+}
+
+.reservation__form {
+  max-width: 385px;
+  margin: 0 auto;
+}
+
+.form__fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin-bottom: 32px;
+  text-align: left;
+}
+
+.form__label {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: left;
+  margin-bottom: 8px;
+}
+
+.form__input {
+  width: 100%;
+  padding: 15px;
+  font-size: 20px;
+  line-height: 30px;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: #000000;
+}
+
+.form__input::placeholder {
+  color: #838383;
+}
+
+.form__button {
+  width: 100%;
+  max-width: 385px;
+  padding: 20px;
+  background-color: #2f80ed;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  border: none;
+  border-radius: 4px;
+}
+
+.form__button:hover {
+  opacity: 0.7;
+}
+
+.form__checkbox-group {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-top: 32px;
+  text-align: center;
+}
+
+.form__checkbox {
+  width: 20px;
+  height: 20px;
+  border-radius: 2px;
+}
+
+.form__checkbox-label {
+  font-size: 16px;
+  line-height: 20px;
+}
