--- a/pages/index.css
+++ b/pages/index.css
@@ -189,12 +189,11 @@
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
-  margin-bottom: 80px;
 }
 
-.reservation__form {
+.form {
   max-width: 385px;
-  margin: 0 auto;
+  margin: 80px auto;
 }
 
 .form__fieldset {
