--- a/pages/index.css
+++ b/pages/index.css
@@ -266,3 +266,77 @@
   font-size: 16px;
   line-height: 20px;
 }
+
+.footer {
+  box-sizing: border-box;
+  background-color: #0a2850;
+  color: #fff;
+  padding: 60px 80px;
+  position: relative;
+  overflow: hidden;
+}
+
+.footer__columns {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.footer__logo {
+  height: 39px;
+  width: 105px;
+  margin-bottom: 60px;
+  z-index: 2;
+  display: block;
+  position: relative;
+}
+
+.footer__content-heading {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.footer__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.footer__list-item {
+  margin-bottom: 16px;
+  font-size: 16px;
+}
+
+.footer__content-link {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 16px;
+  color: #fff;
+}
+
+.footer__social-icon {
+  height: 16px;
+  width: 16px;
+}
+
+.footer__copyright {
+  text-align: left;
+  font-size: 14px;
+  margin-top: 100px;
+  display: flex;
+}
+
+.footer__circle {
+  background-color: #2f80ed;
+  width: 340px;
+  height: 340px;
+  border-radius: 50%;
+  position: absolute;
+  top: -120px;
+  left: -44px;
+}
