--- a/pages/index.css
+++ b/pages/index.css
@@ -1,342 +1,8 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-* {
-  scroll-behavior: smooth;
-}
-
-.header {
-  position: relative;
-  background-color: #ffffff;
-  background-image: url("../images/background_header.svg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  padding: 30px 80px 40px;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  position: absolute;
-  left: 30px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__link:hover {
-  color: #057bf2;
-  text-decoration: underline;
-}
-
-.nav__links {
-  position: absolute;
-  right: 80px;
-  display: flex;
-  gap: 20px;
-  list-style: none;
-  padding: 0;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #000000;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 20px;
-}
-
-.header__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 58px;
-  line-height: 72px;
-  font-weight: 500;
-  letter-spacing: -1px;
-  max-width: 709px;
-  margin-top: 183px;
-}
-
-.header__span-accent {
-  display: block;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__description {
-  font-family: "Noto Serif";
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 683px;
-}
-
-.header__content {
-  display: flex;
-  justify-content: space-between;
-}
-
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  width: 646px;
-  height: 568px;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  margin-top: auto;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.header__paragraph {
-  z-index: 1;
-  display: flex;
-  flex-direction: row;
-  margin: 0;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-}
-
-.header__paragraph-adress {
-  color: #838383;
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url("../images/background_recipes.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  padding: 100px 80px;
-  color: #ffffff;
-}
-
-.recipes__title {
-  font-size: 44px;
-  line-height: 52px;
-  font-weight: 500;
-  max-width: 580px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 438px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  flex-wrap: wrap;
-  margin-top: 80px;
-  margin-bottom: 115px;
-}
-
-.recipes__video-item {
-  max-width: 438px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  border: none;
-}
-
-.recipes__video-caption {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  margin-top: 24px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url("../images/background_reservation.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding: 100px 20px;
-  text-align: center;
-}
-
-.reservation__title {
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  margin-bottom: 80px;
-  margin-top: 0px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.form {
-  max-width: 385px;
-  margin: 0px auto;
-}
-
-.form__fieldset {
-  border: none;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  margin-bottom: 32px;
-  text-align: left;
-}
-
-.form__label {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: left;
-  margin-bottom: 8px;
-}
-
-.form__input {
-  width: 100%;
-  padding: 15px;
-  font-size: 20px;
-  line-height: 30px;
-  border-radius: 4px;
-  box-sizing: border-box;
-  color: #000000;
-}
-
-.form__input::placeholder {
-  color: #838383;
-}
-
-.form__button {
-  width: 100%;
-  max-width: 385px;
-  padding: 20px;
-  background-color: #2f80ed;
-  color: #ffffff;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  border: none;
-  border-radius: 4px;
-}
-
-.form__button:hover {
-  opacity: 0.7;
-}
-
-.form__checkbox-group {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  margin-top: 32px;
-  text-align: center;
-}
-
-.form__checkbox {
-  width: 20px;
-  height: 20px;
-  border-radius: 2px;
-}
-
-.form__checkbox-label {
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.footer {
-  box-sizing: border-box;
-  background-color: #0a2850;
-  color: #fff;
-  padding: 60px 80px;
-  position: relative;
-  overflow: hidden;
-}
-
-.footer__columns {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-
-.footer__logo {
-  height: 39px;
-  width: 105px;
-  margin-bottom: 60px;
-  z-index: 2;
-  display: block;
-  position: relative;
-}
-
-.footer__content-heading {
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
-.footer__list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-}
-
-.footer__list-item {
-  margin-bottom: 16px;
-  font-size: 16px;
-}
-
-.footer__content-link {
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  font-size: 16px;
-  color: #fff;
-}
-
-.footer__social-icon {
-  height: 16px;
-  width: 16px;
-}
-
-.footer__copyright {
-  text-align: left;
-  font-size: 14px;
-  margin-top: 100px;
-  display: flex;
-}
-
-.footer__circle {
-  background-color: #2f80ed;
-  width: 340px;
-  height: 340px;
-  border-radius: 50%;
-  position: absolute;
-  top: -120px;
-  left: -44px;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/header.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/footer.css");
