--- a/blocks/header.css
+++ b/blocks/header.css
@@ -34,7 +34,8 @@
 }
 
 .header__description {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
   font-size: 20px;
   line-height: 30px;
   max-width: 683px;
